create form component and much more thing do

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,6 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+.border-circule{
+  border:6px solid white;
+}
